downloads: Ensure we always fallback to package icon

If the icon for the given content type and its fallbacks are not found
in the theme, GtkImage uses the missing icon. We want to always fallback
to package icon instead, so ensure it be appending it to the list of
icons names used.

https://bugzilla.gnome.org/show_bug.cgi?id=762825